--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "am-imger",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Angular Meteor image uploading",
   "main": "index.js",
   "scripts": {
@@ -10,5 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "mkdirp": "^0.5.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/4shaw/am-imger.git"
   }
 }
